3.1.4/sources/3.1.x-intro.md
# What's new in oxd 3.1.x

## oxd 3.1.4

oxd 3.1.4 includes bug fixes, updated UMA scopes, and  to improve usability and administration.

### What's new

#### Now Open Source
In oxd 3.1.4, we removed license validation and made the code open source under the Apache2 license! 

#### Updated UMA scopes
In coordination with enhancements to oxAuth 3.1.4, we've updated and renamed UMA scopes within oxd.

#### Build without Git
We've added the ability to build oxd without Git, allowing the package to be downloaded as a zip file.

#### Improved client validation and logging
To enhance oxd's usability, we've improved `access_token` validation and adjusted our logging parameters.

### Release notes

Review the [oxd 3.1.4 release notes](./release-notes/index.md) for a full list of fixes and enhancements.

-------

## oxd 3.1.3

oxd 3.1.3 includes improvements to the oxd-https-extension, new features to better support Gluu Gateway, and bug fixes to improve usability and administration. 

### What's new

#### Tighter Gluu Gateway integration

oxd 3.1.3 includes improvements to existing functionality to work better with [Gluu Gateway](https://gluu.org/docs/gg), such as the ability to update existing UMA resources in the Gluu Server.

#### Better https extension

We've expanded our initialization script for the oxd HTTPS extension to increase performance and make configuration easier.

#### Up to 10 OAuth 2.0 clients free, forever!
We wanted to build the oxd ecosystem, so now all accounts include up to 10 OAuth 2.0 clients free forever. All clients in excess of 10 will still be charged $0.33 per day.  

### Release notes

Review the [oxd 3.1.3 release notes](./release-notes/index.md) for a full list of fixes and new features in oxd 3.1.3.

-------

## oxd 3.1.2
oxd 3.1.2 includes bug fixes, easier administration, and additional security features. 

### What's new

#### Better OAuth 2.0 support
oxd 3.1.2 features more comprehensive support for OAuth 2.0, including a new access token introspection command, an UMA RPT introspection command, and support for `and` , `or` logical operations.   

#### Easier Operations
oxd 3.1.2 includes a new command to [remove a client from oxd](https://gluu.org/docs/oxd/3.1.2/api/#remove-site). This is helpful to keep the server organzied and uncluttered. 

### Release notes

Review the [oxd 3.1.2 release notes](./release-notes/index.md) for a full list of fixes and new features in oxd 3.1.2. 

-------

## oxd 3.1.1
We've made significant updates to oxd 3.1.1 to improve performance and functionality. 

### What's Changed

#### Billing Model
- oxd 2.4.4 and 3.0.1 were billed USD $0.33 per server per day. **oxd 3.1.1 is billed USD $0.33 per application per day**

- Existing and/or new installations of oxd 2.4.4 and oxd 3.0.1 will continue to be billed per server per day

- New or upgraded oxd 3.1.1 deployments will be subject to the new per application billing model

Learn more about [pricing & billing](https://gluu.org/docs/oxd/3.1.1/#pricing-billing). 

### What's New

#### RESTful (https)
oxd 3.1.1 includes a new component called the `oxd-https-extension`. The extension is included out-of-the-box in the oxd Linux packages--it simply needs to be started. With the `oxd-https-extension`, applications can make RESTful calls to your oxd server over the web.

#### UMA 2.0
Gluu Server and oxd 3.1.1 are the first commercially supported IAM server and clients to implement the UMA 2.0 [Grant for OAuth 2.0 Authorization](https://docs.kantarainitiative.org/uma/wg/oauth-uma-grant-2.0-05.html) and [Federated Authorization](https://docs.kantarainitiative.org/uma/wg/rec-oauth-uma-federated-authz-2.0.html) specifications. UMA 2.0 now aligns completely with OAuth 2.0. It also re-defines the claims gathering flow, enabling developers to implement multi-step consent, user-interactions, and stepped-up authentication flows. 

#### Caching
oxd 3.1.1 now supports in-memory or redis caching of data to improve throughput for OpenID Connect and UMA clients.

#### Easy Upgrades
oxd 3.1.1 includes an auto-migration process to transfer your existing oxd JSON files to your new oxd 3.1.1 server(s).

### Legacy Compatibility

Please review the following legacy compatibility considerations while evaluating your upgrade path to oxd 3.1.2:

- UMA 2.0: Supported in oxd 3.1.2 and Gluu Server 3.1.1    

- UMA 1.0.1: Not supported in oxd 3.1.1or Gluu Server 3.1.1

- OpenID Connect: Supported in all versions of oxd and Gluu Server   

- Pricing: If you upgrade existing oxd installations to oxd 3.1.1, the new per application billing model described above will take effect. This could have an impact on your monthly bill   

### Release notes

Review the [oxd 3.1.1 release notes](https://gluu.org/docs/oxd/3.1.1/release-notes/) for a full list of fixes and new features in oxd 3.1.1. 
